--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - ASSETS/IMAGES/
+    - ASSETS/files/catalog.json
     - ASSETS/files/
     # - IMAGES/my image.jpeg
 
