--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   velocity_x: ^4.1.0
+  lorem_ipsum: ^0.0.3
 
 dev_dependencies:
   flutter_test:
